<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/shoppingListAddbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Add" />

    <include
        layout="@layout/buttonbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>