<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <com.tokko.recipesv2.views.EditableIngredientList
        android:id="@+id/ingredient_list"
        android:layout_width="150dp"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.tokko.recipesv2.views.EditTextViewSwitchable
                android:id="@+id/recipe_title"
                style="@android:style/TextAppearance.DeviceDefault.Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <com.tokko.recipesv2.views.EditableIntegerTextViewSwitchable
                android:id="@+id/recipe_helpings"
                style="@android:style/TextAppearance.DeviceDefault.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <com.tokko.recipesv2.views.EditableInstructionList
            android:id="@+id/instructionList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>