<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/listad_add"
        android:showAsAction="always"
        android:title="Add" />
    <item
        android:id="@+id/manage_groceries"
        android:title="Manage groceries" />

</menu>